--- a/blogspot.html
+++ b/blogspot.html
@@ -10,8 +10,12 @@
 </head>
 
 <body>
-    <h1>Aqui se va a colocar el titulo del blog</h1>
-    <p>Aquí está el primer parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el títitulo actractivo e interesate del post</h1>
+            <p>Y este es el párrafo donde explicaremos las cosas increíbles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 
 </body>
 
