--- a/blogspot.html
+++ b/blogspot.html
@@ -11,6 +11,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es el títitulo actractivo e interesate del post</h1>
             <p>Y este es el párrafo donde explicaremos las cosas increíbles que se pueden hacer con ramas</p>
