--- a/blogspot.html
+++ b/blogspot.html
@@ -14,6 +14,8 @@
         <div id="post">
             <h1>Este es el títitulo actractivo e interesate del post</h1>
             <p>Y este es el párrafo donde explicaremos las cosas increíbles que se pueden hacer con ramas</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o
+                salir en Youtube</p>
         </div>
     </div>
 
